--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,8 @@
-.App {
+.MyApp {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.MyApp-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -21,18 +10,75 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+body {
+  background-color: #20303B;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*
+colors !
+orange - F6A02E
+black - 3D5F6E
+white - F3F3EB
+blue - A0C2DA
+green - 63CA64
+*/
+
+.orange {
+  color: #F6A02E
+}
+.black {
+  color: #20303B
+}
+.white {
+  color: #F3F3EB
+}
+.blue {
+  color: #A0C2DA
+}
+.gray {
+  color: #3E525B
+}
+
+.bg-orange {
+  background-color: #F6A02E
+}
+.bg-black {
+  background-color: #20303B
+}
+.bg-white {
+  background-color: #F3F3EB
+}
+.bg-blue {
+  background-color: #A0C2DA
+}
+.bg-gray {
+  background-color: #3E525B
+}
+
+/*
+textbox input
+*/
+.textarea {
+  width: 90%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  resize: none;
+  margin: 0 auto;
+  display: block;
+  border-radius: 20px;
+  resize: none;
+}
+
+.white::placeholder {
+  color: #F3F3EB;
+  opacity: 0.5;
+}
+
+.messaging {
+   overflow: 'auto';
+   height:400px;
 }
