--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,8 @@ green - 63CA64
   color: #3E525B
 }
 
+/* adding this line to test committing again */
+
 .bg-orange {
   background-color: #F6A02E
 }
